Animate links underline, fix z-index problem.

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -119,3 +119,29 @@
     @apply cursor-point;
   }*/
 }
+
+/* Links underline animation */
+
+.underline-animate a {
+  color: #4e73f2;
+  display: inline-block;
+  position: relative;
+}
+
+.underline-animate a::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: '';
+  display: block;
+  height: 2px;
+  left: 0;
+  position: absolute;
+  background: #4e73f2;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.underline-animate a:hover::after {
+  width: 100%;
+  left: 0;
+}
